--- a/src/css/output.css
+++ b/src/css/output.css
@@ -554,6 +554,10 @@ video {
   --tw-contain-style:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -576,6 +580,14 @@ video {
 
 .top-\[46px\] {
   top: 46px;
+}
+
+.-left-0 {
+  left: -0px;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .mx-3 {
