--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.cdnfonts.com/css/interstate-2');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body, html {
+    font-family: 'Interstate', sans-serif !important;
+    font-size: 14px;
+}
 
 /* clears the ‘X’ input search from Internet Explorer */
 input[type=search]::-ms-clear { display: none; width : 0; height: 0; }
@@ -13,4 +20,21 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 
 
 
+
+
+
 /** test **/
+@supports (scrollbar-color: auto) {
+    .custom-scrollbar {
+      scrollbar-color: theme('colors.soundcloud-second-higher-bg') theme('colors.soundcloud-second-bg');
+    }
+}
+
+@supports selector(::-webkit-scrollbar) {
+  .custom-scrollbar::-webkit-scrollbar {
+    background: theme('colors.soundcloud-second-bg');
+  }
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background: theme('colors.soundcloud-second-higher-bg');
+  }
+}
