--- a/src/css/output.css
+++ b/src/css/output.css
@@ -616,6 +616,10 @@ video {
   left: -18rem;
 }
 
+.m-0{
+  margin: 0px;
+}
+
 .mx-3{
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -632,6 +636,17 @@ video {
 
 .mr-2{
   margin-right: 0.5rem;
+}
+
+.mr-1{
+  margin-right: 0.25rem;
+}
+
+.line-clamp-1{
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
 }
 
 .flex{
@@ -770,6 +785,12 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-10 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .divide-x > :not([hidden]) ~ :not([hidden]){
   --tw-divide-x-reverse: 0;
   border-right-width: calc(1px * var(--tw-divide-x-reverse));
@@ -878,6 +899,10 @@ video {
 
 .p-3{
   padding: 0.75rem;
+}
+
+.p-0{
+  padding: 0px;
 }
 
 .px-1\.5{
@@ -1022,6 +1047,10 @@ input[type="search"]::-webkit-search-results-decoration {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.375rem * var(--tw-space-x-reverse));
   margin-left: calc(0.375rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.\*\:p-0 > *{
+  padding: 0px;
 }
 
 .\*\:py-1\.5 > *{
