--- a/src/css/output.css
+++ b/src/css/output.css
@@ -632,6 +632,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.mt-7 {
+  margin-top: 1.75rem;
+}
+
 .line-clamp-1 {
   overflow: hidden;
   display: -webkit-box;
@@ -848,8 +852,16 @@ video {
   border-color: rgb(69 69 69 / var(--tw-divide-opacity));
 }
 
+.self-start {
+  align-self: flex-start;
+}
+
 .self-end {
   align-self: flex-end;
+}
+
+.self-baseline {
+  align-self: baseline;
 }
 
 .overflow-hidden {
