--- a/src/css/output.css
+++ b/src/css/output.css
@@ -590,6 +590,10 @@ video {
   top: 46px;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -632,8 +636,16 @@ video {
   margin-top: 1.25rem;
 }
 
-.mt-7 {
-  margin-top: 1.75rem;
+.mb-\[100px\] {
+  margin-bottom: 100px;
+}
+
+.mb-\[1000px\] {
+  margin-bottom: 1000px;
+}
+
+.mb-\[10000px\] {
+  margin-bottom: 10000px;
 }
 
 .line-clamp-1 {
@@ -700,6 +712,26 @@ video {
   height: 100%;
 }
 
+.size-20 {
+  width: 5rem;
+  height: 5rem;
+}
+
+.size-5 {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
+.size-10 {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.size-8 {
+  width: 2rem;
+  height: 2rem;
+}
+
 .h-\[28px\] {
   height: 28px;
 }
@@ -714,6 +746,10 @@ video {
 
 .max-h-\[476px\] {
   max-height: 476px;
+}
+
+.max-h-screen {
+  max-height: 100vh;
 }
 
 .w-52 {
@@ -825,12 +861,6 @@ video {
   margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
 .space-y-5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
@@ -852,16 +882,8 @@ video {
   border-color: rgb(69 69 69 / var(--tw-divide-opacity));
 }
 
-.self-start {
-  align-self: flex-start;
-}
-
 .self-end {
   align-self: flex-end;
-}
-
-.self-baseline {
-  align-self: baseline;
 }
 
 .overflow-hidden {
@@ -986,6 +1008,10 @@ video {
   padding: 0.75rem;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1058,6 +1084,11 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-bold {
@@ -1182,6 +1213,11 @@ input[type="search"]::-webkit-search-results-decoration {
   padding-right: 1.5rem;
 }
 
+.hover\:border-soundcloud-orange:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(204 80 0 / var(--tw-border-opacity));
+}
+
 .hover\:bg-soundcloud-orange:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(204 80 0 / var(--tw-bg-opacity));
@@ -1200,6 +1236,14 @@ input[type="search"]::-webkit-search-results-decoration {
 .hover\:\*\:bg-soundcloud-hover > *:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(31 34 35 / var(--tw-bg-opacity));
+}
+
+.hover\:\*\:fill-soundcloud-orange > *:hover {
+  fill: #CC5000;
+}
+
+.group:hover .group-hover\:flex {
+  display: flex;
 }
 
 .group:hover .group-hover\:fill-white {
