--- a/src/css/output.css
+++ b/src/css/output.css
@@ -554,6 +554,10 @@ video {
   --tw-contain-style:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -590,8 +594,17 @@ video {
   top: 46px;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .z-50 {
   z-index: 50;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .mx-3 {
@@ -608,8 +621,16 @@ video {
   margin-bottom: 0.25rem;
 }
 
+.mb-14 {
+  margin-bottom: 3.5rem;
+}
+
 .mb-\[1000px\] {
   margin-bottom: 1000px;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
 }
 
 .ml-auto {
@@ -682,6 +703,11 @@ video {
   height: 1rem;
 }
 
+.size-5 {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
 .size-6 {
   width: 1.5rem;
   height: 1.5rem;
@@ -700,6 +726,11 @@ video {
 .size-\[26px\] {
   width: 26px;
   height: 26px;
+}
+
+.size-\[30px\] {
+  width: 30px;
+  height: 30px;
 }
 
 .size-\[46px\] {
@@ -725,6 +756,14 @@ video {
   height: 46px;
 }
 
+.h-\[50px\] {
+  height: 50px;
+}
+
+.h-px {
+  height: 1px;
+}
+
 .max-h-\[400px\] {
   max-height: 400px;
 }
@@ -737,8 +776,16 @@ video {
   width: 13rem;
 }
 
+.w-\[30\%\] {
+  width: 30%;
+}
+
 .w-\[300px\] {
   width: 300px;
+}
+
+.w-\[33vw\] {
+  width: 33vw;
 }
 
 .w-\[400px\] {
@@ -757,12 +804,32 @@ video {
   width: 100%;
 }
 
-.w-12 {
-  width: 3rem;
+.w-20 {
+  width: 5rem;
 }
 
-.w-32 {
-  width: 8rem;
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-\[50vw\] {
+  width: 50vw;
+}
+
+.w-\[20vw\] {
+  width: 20vw;
+}
+
+.w-\[10vw\] {
+  width: 10vw;
+}
+
+.w-\[15vw\] {
+  width: 15vw;
+}
+
+.w-\[25vw\] {
+  width: 25vw;
 }
 
 .shrink-0 {
@@ -939,6 +1006,11 @@ video {
   background-color: rgb(13 14 14 / var(--tw-bg-opacity));
 }
 
+.bg-soundcloud-divide {
+  --tw-bg-opacity: 1;
+  background-color: rgb(69 69 69 / var(--tw-bg-opacity));
+}
+
 .bg-soundcloud-header {
   --tw-bg-opacity: 1;
   background-color: rgb(38 42 43 / var(--tw-bg-opacity));
@@ -954,9 +1026,9 @@ video {
   background-color: rgb(204 80 0 / var(--tw-bg-opacity));
 }
 
-.bg-red-600 {
+.bg-soundcloud-second-bg {
   --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+  background-color: rgb(32 35 36 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-tr {
@@ -1021,6 +1093,11 @@ video {
   padding-right: 0.5rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1036,24 +1113,33 @@ video {
   padding-bottom: 0.125rem;
 }
 
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
 }
 
 .pr-1 {
   padding-right: 0.25rem;
 }
 
+.pr-32 {
+  padding-right: 8rem;
+}
+
 .pr-7 {
   padding-right: 1.75rem;
 }
 
-.pl-20 {
-  padding-left: 5rem;
-}
-
-.pl-5 {
-  padding-left: 1.25rem;
+.pr-5 {
+  padding-right: 1.25rem;
 }
 
 .text-center {
@@ -1274,6 +1360,10 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 @media (min-width: 768px) {
+  .md\:block {
+    display: block;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -1294,6 +1384,21 @@ input[type="search"]::-webkit-search-results-decoration {
 
   .lg\:w-auto {
     width: auto;
+  }
+
+  .lg\:w-\[33vw\] {
+    width: 33vw;
+  }
+
+  .lg\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .lg\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
   }
 }
 
