--- a/src/css/output.css
+++ b/src/css/output.css
@@ -602,6 +602,10 @@ video {
   z-index: 50;
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -762,6 +766,14 @@ video {
 
 .h-px {
   height: 1px;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[40px\] {
+  height: 40px;
 }
 
 .max-h-\[400px\] {
@@ -1031,6 +1043,11 @@ video {
   background-color: rgb(32 35 36 / var(--tw-bg-opacity));
 }
 
+.bg-soundcloud-hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 34 35 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
@@ -1076,6 +1093,10 @@ video {
 
 .p-3 {
   padding: 0.75rem;
+}
+
+.p-px {
+  padding: 1px;
 }
 
 .px-1 {
@@ -1269,6 +1290,26 @@ input[type="search"]::-webkit-search-results-decoration {
   height: 46px;
 }
 
+.\*\:h-5 > * {
+  height: 1.25rem;
+}
+
+.\*\:h-10 > * {
+  height: 2.5rem;
+}
+
+.\*\:h-16 > * {
+  height: 4rem;
+}
+
+.\*\:h-14 > * {
+  height: 3.5rem;
+}
+
+.\*\:w-20 > * {
+  width: 5rem;
+}
+
 .\*\:cursor-pointer > * {
   cursor: pointer;
 }
@@ -1291,9 +1332,49 @@ input[type="search"]::-webkit-search-results-decoration {
   margin-left: calc(0.375rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.\*\:space-y-2 > * > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.\*\:space-y-1\.5 > * > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.375rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.375rem * var(--tw-space-y-reverse));
+}
+
+.\*\:rounded-lg > * {
+  border-radius: 0.5rem;
+}
+
+.\*\:bg-soundcloud-second-bg > * {
+  --tw-bg-opacity: 1;
+  background-color: rgb(32 35 36 / var(--tw-bg-opacity));
+}
+
+.\*\:bg-soundcloud-hover > * {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 34 35 / var(--tw-bg-opacity));
+}
+
+.\*\:p-2 > * {
+  padding: 0.5rem;
+}
+
 .\*\:py-1\.5 > * {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
+}
+
+.\*\:px-4 > * {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.\*\:py-2 > * {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .\*\:pl-3 > * {
