--- a/src/css/output.css
+++ b/src/css/output.css
@@ -574,6 +574,10 @@ video {
   bottom: 0px;
 }
 
+.bottom-20 {
+  bottom: 5rem;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -594,6 +598,18 @@ video {
   top: 46px;
 }
 
+.left-1\/2 {
+  left: 50%;
+}
+
+.bottom-16 {
+  bottom: 4rem;
+}
+
+.bottom-\[66px\] {
+  bottom: 66px;
+}
+
 .z-20 {
   z-index: 20;
 }
@@ -602,8 +618,8 @@ video {
   z-index: 50;
 }
 
-.m-1 {
-  margin: 0.25rem;
+.m-auto {
+  margin: auto;
 }
 
 .mx-2 {
@@ -619,6 +635,11 @@ video {
 .my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mb-1 {
@@ -671,6 +692,14 @@ video {
 
 .mt-7 {
   margin-top: 1.75rem;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
 }
 
 .line-clamp-1 {
@@ -752,6 +781,21 @@ video {
   height: 100%;
 }
 
+.size-20 {
+  width: 5rem;
+  height: 5rem;
+}
+
+.size-10 {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.size-12 {
+  width: 3rem;
+  height: 3rem;
+}
+
 .h-\[28px\] {
   height: 28px;
 }
@@ -768,12 +812,12 @@ video {
   height: 1px;
 }
 
-.h-\[\] {
-  height: ;
+.h-3 {
+  height: 0.75rem;
 }
 
-.h-\[40px\] {
-  height: 40px;
+.h-32 {
+  height: 8rem;
 }
 
 .max-h-\[400px\] {
@@ -788,16 +832,20 @@ video {
   width: 13rem;
 }
 
+.w-\[15vw\] {
+  width: 15vw;
+}
+
+.w-\[25vw\] {
+  width: 25vw;
+}
+
 .w-\[30\%\] {
   width: 30%;
 }
 
 .w-\[300px\] {
   width: 300px;
-}
-
-.w-\[33vw\] {
-  width: 33vw;
 }
 
 .w-\[400px\] {
@@ -816,32 +864,16 @@ video {
   width: 100%;
 }
 
-.w-20 {
-  width: 5rem;
+.w-\[90vw\] {
+  width: 90vw;
 }
 
-.w-\[50\%\] {
-  width: 50%;
+.w-\[95vw\] {
+  width: 95vw;
 }
 
-.w-\[50vw\] {
-  width: 50vw;
-}
-
-.w-\[20vw\] {
-  width: 20vw;
-}
-
-.w-\[10vw\] {
-  width: 10vw;
-}
-
-.w-\[15vw\] {
-  width: 15vw;
-}
-
-.w-\[25vw\] {
-  width: 25vw;
+.w-\[97vw\] {
+  width: 97vw;
 }
 
 .shrink-0 {
@@ -850,6 +882,11 @@ video {
 
 .grow {
   flex-grow: 1;
+}
+
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .rotate-180 {
@@ -1028,6 +1065,11 @@ video {
   background-color: rgb(38 42 43 / var(--tw-bg-opacity));
 }
 
+.bg-soundcloud-hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 34 35 / var(--tw-bg-opacity));
+}
+
 .bg-soundcloud-main-bg {
   --tw-bg-opacity: 1;
   background-color: rgb(24 26 27 / var(--tw-bg-opacity));
@@ -1043,9 +1085,19 @@ video {
   background-color: rgb(32 35 36 / var(--tw-bg-opacity));
 }
 
-.bg-soundcloud-hover {
+.bg-red-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(31 34 35 / var(--tw-bg-opacity));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-tr {
@@ -1095,10 +1147,6 @@ video {
   padding: 0.75rem;
 }
 
-.p-px {
-  padding: 1px;
-}
-
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1112,11 +1160,6 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 
 .px-4 {
@@ -1134,9 +1177,9 @@ video {
   padding-bottom: 0.125rem;
 }
 
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .pb-10 {
@@ -1151,16 +1194,16 @@ video {
   padding-right: 0.25rem;
 }
 
-.pr-32 {
-  padding-right: 8rem;
-}
-
 .pr-7 {
   padding-right: 1.75rem;
 }
 
 .pr-5 {
   padding-right: 1.25rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
 }
 
 .text-center {
@@ -1229,6 +1272,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.backdrop-blur-md {
+  --tw-backdrop-blur: blur(12px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
 body, html {
   font-size: 15px;
 }
@@ -1286,24 +1335,12 @@ input[type="search"]::-webkit-search-results-decoration {
   display: flex;
 }
 
-.\*\:h-\[46px\] > * {
-  height: 46px;
-}
-
-.\*\:h-5 > * {
-  height: 1.25rem;
-}
-
-.\*\:h-10 > * {
-  height: 2.5rem;
-}
-
-.\*\:h-16 > * {
-  height: 4rem;
-}
-
 .\*\:h-14 > * {
   height: 3.5rem;
+}
+
+.\*\:h-\[46px\] > * {
+  height: 46px;
 }
 
 .\*\:w-20 > * {
@@ -1332,12 +1369,6 @@ input[type="search"]::-webkit-search-results-decoration {
   margin-left: calc(0.375rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.\*\:space-y-2 > * > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
 .\*\:space-y-1\.5 > * > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.375rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1348,33 +1379,9 @@ input[type="search"]::-webkit-search-results-decoration {
   border-radius: 0.5rem;
 }
 
-.\*\:bg-soundcloud-second-bg > * {
-  --tw-bg-opacity: 1;
-  background-color: rgb(32 35 36 / var(--tw-bg-opacity));
-}
-
-.\*\:bg-soundcloud-hover > * {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 34 35 / var(--tw-bg-opacity));
-}
-
-.\*\:p-2 > * {
-  padding: 0.5rem;
-}
-
 .\*\:py-1\.5 > * {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
-}
-
-.\*\:px-4 > * {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.\*\:py-2 > * {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .\*\:pl-3 > * {
@@ -1441,10 +1448,6 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 @media (min-width: 768px) {
-  .md\:block {
-    display: block;
-  }
-
   .md\:flex {
     display: flex;
   }
@@ -1463,18 +1466,12 @@ input[type="search"]::-webkit-search-results-decoration {
     display: none;
   }
 
-  .lg\:w-auto {
-    width: auto;
-  }
-
   .lg\:w-\[33vw\] {
     width: 33vw;
   }
 
-  .lg\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1rem * var(--tw-space-x-reverse));
-    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  .lg\:w-auto {
+    width: auto;
   }
 
   .lg\:px-3 {
