--- a/src/css/output.css
+++ b/src/css/output.css
@@ -574,12 +574,16 @@ video {
   bottom: 0px;
 }
 
-.bottom-20 {
-  bottom: 5rem;
+.bottom-\[66px\] {
+  bottom: 66px;
 }
 
 .left-0 {
   left: 0px;
+}
+
+.left-1\/2 {
+  left: 50%;
 }
 
 .right-0 {
@@ -598,28 +602,12 @@ video {
   top: 46px;
 }
 
-.left-1\/2 {
-  left: 50%;
-}
-
-.bottom-16 {
-  bottom: 4rem;
-}
-
-.bottom-\[66px\] {
-  bottom: 66px;
-}
-
 .z-20 {
   z-index: 20;
 }
 
 .z-50 {
   z-index: 50;
-}
-
-.m-auto {
-  margin: auto;
 }
 
 .mx-2 {
@@ -635,11 +623,6 @@ video {
 .my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .mb-1 {
@@ -692,14 +675,6 @@ video {
 
 .mt-7 {
   margin-top: 1.75rem;
-}
-
-.mr-auto {
-  margin-right: auto;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
 }
 
 .line-clamp-1 {
@@ -766,6 +741,11 @@ video {
   height: 30px;
 }
 
+.size-\[40px\] {
+  width: 40px;
+  height: 40px;
+}
+
 .size-\[46px\] {
   width: 46px;
   height: 46px;
@@ -779,21 +759,6 @@ video {
 .size-full {
   width: 100%;
   height: 100%;
-}
-
-.size-20 {
-  width: 5rem;
-  height: 5rem;
-}
-
-.size-10 {
-  width: 2.5rem;
-  height: 2.5rem;
-}
-
-.size-12 {
-  width: 3rem;
-  height: 3rem;
 }
 
 .h-\[28px\] {
@@ -810,14 +775,6 @@ video {
 
 .h-px {
   height: 1px;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-32 {
-  height: 8rem;
 }
 
 .max-h-\[400px\] {
@@ -860,20 +817,12 @@ video {
   width: 69px;
 }
 
-.w-full {
-  width: 100%;
-}
-
-.w-\[90vw\] {
-  width: 90vw;
-}
-
-.w-\[95vw\] {
-  width: 95vw;
-}
-
 .w-\[97vw\] {
   width: 97vw;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .shrink-0 {
@@ -1085,19 +1034,9 @@ video {
   background-color: rgb(32 35 36 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-tr {
@@ -1177,11 +1116,6 @@ video {
   padding-bottom: 0.125rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1196,14 +1130,6 @@ video {
 
 .pr-7 {
   padding-right: 1.75rem;
-}
-
-.pr-5 {
-  padding-right: 1.25rem;
-}
-
-.pr-2 {
-  padding-right: 0.5rem;
 }
 
 .text-center {
@@ -1272,12 +1198,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.backdrop-blur-md {
-  --tw-backdrop-blur: blur(12px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
 body, html {
   font-size: 15px;
 }
@@ -1319,6 +1239,10 @@ input[type="search"]::-webkit-search-results-decoration {
   .custom-scrollbar::-webkit-scrollbar-thumb {
     background: #575E62;
   }
+}
+
+.cut-circle {
+  clip-path: polygon(50% 0, 50% 47%, 65% 100%, 100% 100%, 100% 0);
 }
 
 /** test **/
@@ -1508,3 +1432,4 @@ input[type="search"]::-webkit-search-results-decoration {
   --tw-bg-opacity: 1;
   background-color: rgb(31 34 35 / var(--tw-bg-opacity));
 }
+
