--- a/src/css/output.css
+++ b/src/css/output.css
@@ -598,8 +598,40 @@ video {
   top: 0.375rem;
 }
 
+.top-1\/2 {
+  top: 50%;
+}
+
 .top-\[46px\] {
   top: 46px;
+}
+
+.bottom-1\/2 {
+  bottom: 50%;
+}
+
+.left-10 {
+  left: 2.5rem;
+}
+
+.-left-10 {
+  left: -2.5rem;
+}
+
+.-left-5 {
+  left: -1.25rem;
+}
+
+.-right-5 {
+  right: -1.25rem;
+}
+
+.-left-3 {
+  left: -0.75rem;
+}
+
+.-right-3 {
+  right: -0.75rem;
 }
 
 .z-20 {
@@ -633,8 +665,8 @@ video {
   margin-bottom: 3.5rem;
 }
 
-.mb-\[1000px\] {
-  margin-bottom: 1000px;
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .ml-5 {
@@ -651,6 +683,10 @@ video {
 
 .mr-2 {
   margin-right: 0.5rem;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
 }
 
 .mr-6 {
@@ -731,6 +767,11 @@ video {
   height: 2rem;
 }
 
+.size-\[170px\] {
+  width: 170px;
+  height: 170px;
+}
+
 .size-\[26px\] {
   width: 26px;
   height: 26px;
@@ -739,6 +780,11 @@ video {
 .size-\[30px\] {
   width: 30px;
   height: 30px;
+}
+
+.size-\[32px\] {
+  width: 32px;
+  height: 32px;
 }
 
 .size-\[40px\] {
@@ -773,6 +819,10 @@ video {
   height: 50px;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .h-px {
   height: 1px;
 }
@@ -791,6 +841,10 @@ video {
 
 .w-\[15vw\] {
   width: 15vw;
+}
+
+.w-\[170px\] {
+  width: 170px;
 }
 
 .w-\[25vw\] {
@@ -835,6 +889,11 @@ video {
 
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-20 {
+  --tw-translate-y: 5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -944,6 +1003,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
 .overflow-y-auto {
   overflow-y: auto;
 }
@@ -999,6 +1062,11 @@ video {
   border-color: rgb(204 80 0 / var(--tw-border-opacity));
 }
 
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
 .bg-soundcloud-black {
   --tw-bg-opacity: 1;
   background-color: rgb(13 14 14 / var(--tw-bg-opacity));
@@ -1037,6 +1105,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-tr {
@@ -1116,6 +1189,21 @@ video {
   padding-bottom: 0.125rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1132,8 +1220,17 @@ video {
   padding-right: 1.75rem;
 }
 
+.pt-20 {
+  padding-top: 5rem;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-\[14px\] {
@@ -1239,6 +1336,18 @@ input[type="search"]::-webkit-search-results-decoration {
   .custom-scrollbar::-webkit-scrollbar-thumb {
     background: #575E62;
   }
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, and Opera */
 }
 
 .cut-circle {
@@ -1358,6 +1467,11 @@ input[type="search"]::-webkit-search-results-decoration {
   display: flex;
 }
 
+.group:hover .group-hover\:border-soundcloud-orange {
+  --tw-border-opacity: 1;
+  border-color: rgb(204 80 0 / var(--tw-border-opacity));
+}
+
 .group:hover .group-hover\:fill-white {
   fill: #fff;
 }
@@ -1369,6 +1483,10 @@ input[type="search"]::-webkit-search-results-decoration {
 .group:hover .group-hover\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:\*\:stroke-soundcloud-orange > * {
+  stroke: #CC5000;
 }
 
 @media (min-width: 768px) {
